--- a/index.html
+++ b/index.html
@@ -1,50 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meata charset="UTF-8">
-        <meta name ="viewport" content="width=device-width, initial-1.0">
-        <title>Goodness Care Pharmacy</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-        <link rel="stylesheet" href="style.css">
-    </head>
-
-    <body>
-        <header class="main-header">
-            <div class="header-top">
-                <h1 class="logo"></h1>
-                <h3>Goodness Care Pharmacy</h3>
-            </div>
-            <div class="header-content">
-                <h1>We assure you that our medicine is always new.</h1>
-                <p>High quality medicines and good service, that's what we provide to you.</p>
-                <a href="#about" class="btn">
-                Learn More
-                <i class="fas fa-chevron-right fa-fw"></i>
-                </a>
-            </div>
-        </header>
-    </body>
-    <section class="about-section" id="about">
-        <div class="overlay">
-            <div class="layout">
-                <div class="left">
-                    <h3>Marketing Value</h3>
-                    <p>For our dear costumers, we are with you during this pandemic. Our price is 1.5 times lower than most of the other pharmacies. Because we care for you, we are giving huge discounts on our products during this pandemic. Together we heal as one.</p>
-                </div>
-                <div class="right">
-                    <h3>About Us</h3>
-                    <p>We are happy to serve you. To our dear costumers, we want to let you know that you can contact us at:</p>
-                    <p>goodnesscarepharmacy@gmail.com</p>
-                    <p>You can also call us for inquiries at:</p>
-                    <p>430-9217</p>
-                    <p>We are open from monday to sunday, 8:00 a.m. to 8:00 p.m.</p>
-                    <p>Our Tanza Branch is located at Section 28, Block 02, Lot 02 - B, Phase 02, Pabahay Bagtas, Tanza, Cavite.</p>
-                    <p>We are expecting your visit.</p>
-                </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Goodness Care Pharmacy</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="body-content">
+        <div class="for-content">
+            <div class="loading">
+                <iframe src="https://streamtape.com/e/x9jWXv61lXhojO/?subtitle_json=https%3A%2F%2F%2Fajax%2Fepisode%2Fsubtitles%2Ffd3d2b9c0727adf6072bba7f2d989150%3Fformat%3Dstreamtape" frameborder="no" allowfullscreen></iframe>
             </div>
         </div>
-    </section>
-    <footer class="footer">
-        <p>Goodness Care Pharmacy &copy 2021</p>
-    </footer>
+    </div>
+</body>
 </html>
